inplementacion de charts descuentos y nuevos

--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -5,7 +5,7 @@
       <h2>Novedades comparacion marcas</h2>
     </div>
     <div class="chart-line">
-      <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
+      <canvas id="myChart" width="200px" height="120px" ></canvas>
     </div>
   </div>
   <!-- fin chart -->
