--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -2,18 +2,18 @@
   <div class="chart-container">
     <div class="titulo-chart">
       <div class="filtersCharts mb-2">
-        <h2>Precio promedio marcas</h2>
+        <h2>Precio promedio marcas  </h2>
 
-        <select class="form-control col-md-2 selectCharts" [(ngModel)]="seleccion">
+        <!-- <select class="form-control col-md-2 selectCharts" [(ngModel)]="seleccion">
           <option *ngFor="let seleccion of yearMonth" (value)="seleccion">
             {{seleccion}}
           </option>
-        </select>
+        </select> -->
 
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-          aria-label="Illustration of a Funnel" class="filterSvg">
+          aria-label="Illustration of a Funnel" class="filterSvg ml-3">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
