--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -3,11 +3,13 @@
 <div class="chart-container">
   <div class="titulo-chart">
     <h2>Descuento promedio marcas</h2>
-    <select class="form-control col-md-2" [(ngModel)]="seleccion" >
+    <!-- <select class="form-control col-md-2" [(ngModel)]="seleccion" >
       <option *ngFor="let seleccion of yearMonth" (value)="seleccion" >
         {{seleccion}}
       </option>
-    </select>
+    </select> -->
+
+    
   </div>
   <div class="chart-line">
     <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
