se implementan todos los charts funcionando y los cards

--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -12,7 +12,7 @@
     
   </div>
   <div class="chart-line">
-    <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
+    <canvas id="myChart" width="200px" height="120px" ></canvas>
   </div>
 </div>
 
