--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -4,7 +4,7 @@
     <h2>Total SKU marcas</h2>
   </div>
   <div class="chart-line">
-    <canvas id="myChart" width="200px" height="120px" #mychart></canvas>
+    <canvas id="myChart" width="200px" height="120px" ></canvas>
   </div>
 </div>
 <!-- fin chart -->
