Se captura el valor seleccionado del filtro en un array

--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -22,18 +22,12 @@
   width: 100%;
 }
 
-.selectCharts {
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top: -8px;
-}
-
 .filterTable {
   display: flex;
   width: auto;
 }
 
-.filterSvgTable {
+.filterSvgCharts, .filterSvgTable {
   margin-left: 20px;
   margin-top: -10px;
 }
